tests/snapshots/tui_tests__issue_list_3_items.snap
---
source: tests/tui_tests.rs
assertion_line: 60
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│   #     Name                     Author                   Updated            │
│>> 1     Fix login bug            Alice                    2025-01-02 12:00:00│
│   2     Add dark mode            Bob                      2025-01-02 12:00:00│
│   3     untitled                 Charlie                  2025-01-02 12:00:00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  n: new  Enter/l: select  q: quit
