tests/snapshots/tui_tests__issue_list_empty.snap
---
source: tests/tui_tests.rs
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│#     Name                       Author                    Updated            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  Enter/l: select  q: quit
