tests/snapshots/tui_tests__issue_list_many.snap
---
source: tests/tui_tests.rs
expression: output
---
 Issues
▶   #3 Third issue                              2025-06-03 12:00:00
    #2 Second issue                             2025-06-02 12:00:00
    #1 First issue                              2025-06-01 12:00:00
