tests/snapshots/tui_tests__issue_list_render.snap
---
source: tests/tui_tests.rs
expression: buffer_to_string(buffer)
---
┌Issues  (j/k=navigate  Enter/l=open  q=quit)──────────────┐
│issue 0  #1                                               │
│issue 1  #2                                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
