tests/snapshots/tui_tests__issue_list_show_archived_view.snap
---
source: tests/tui_tests.rs
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│   #     Name                     Author                   Updated            │
│>> 1     Active issue             Alice                    2025-01-02 12:00:00│
│   2     [archived] Done with thi Bob                      2025-01-02 12:00:00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  n: new  a: archive  A: show archived  Enter/l: select  q: quit
