tests/snapshots/tui_tests__issue_list_unnamed.snap
---
source: tests/tui_tests.rs
expression: output
---
 Issues
  #1 (unnamed)                                2025-06-01 12:00:00
