tests/snapshots/tui_tests__issue_list_with_empty_name_input_modal.snap
---
source: tests/tui_tests.rs
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│   #     Name                     Author                   Updated            │
│>> 1     First                    Alice                    2025-01-02 12:00:00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                   ┌New issue name (blank = untitled)─────┐                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   └──────────────────────────────────────┘                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  n: new  a: archive  A: show archived  Enter/l: select  q: quit
