tests/snapshots/tui_tests__issue_list_with_error_modal.snap
---
source: tests/tui_tests.rs
assertion_line: 273
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│   #     Name                     Author                   Updated            │
│>> 1     First                    Alice                    2025-01-02 12:00:00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│              ┌Error───────────────────────────────────────────┐              │
│              │editor exited with non-zero status; assuming    │              │
│              │cancel                                          │              │
│              │                                                │              │
│              │                                                │              │
│              │                                                │              │
│              └────────────────────────────────────────────────┘              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  n: new  Enter/l: select  q: quit
