tests/snapshots/tui_tests__issue_list_with_name_input_modal.snap
---
source: tests/tui_tests.rs
assertion_line: 243
expression: output
---
┌Issues────────────────────────────────────────────────────────────────────────┐
│   #     Name                     Author                   Updated            │
│>> 1     First                    Alice                    2025-01-02 12:00:00│
│   2     Second                   Bob                      2025-01-02 12:00:00│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                   ┌New issue name (blank = untitled)─────┐                   │
│                   │My Bug Report                         │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   └──────────────────────────────────────┘                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k: navigate  n: new  Enter/l: select  q: quit
